gobmkida/c1/fastlib
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/fastlib/src/engine/board.c:1946:24: error: use of undeclared identifier 'byte_9AA89F'
if ( ( unsigned __int8)byte_9AA89F[pos] == color && ( v8 = string[239].neighborlist[pos + 160], v8 != v7) ) 
                       ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/fastlib/src/engine/board.c:1948:24: error: use of undeclared identifier 'byte_9AA88C'
if ( ( unsigned __int8)byte_9AA88C[pos] == color ) 
                       ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/fastlib/src/engine/board.c:1962:24: error: use of undeclared identifier 'byte_9AA88C'
if ( ( unsigned __int8)byte_9AA88C[pos] == color ) 
                       ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/fastlib/src/engine/board.c:1985:6: error: use of undeclared identifier 'byte_9AA89F'
if ( byte_9AA89F[pos] ) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/fastlib/src/engine/board.c:1987:35: error: use of undeclared identifier 'byte_9AA88C'
return ( board[pos + 1] == 0) + ( byte_9AA88C[pos] == 0) + v15; 
                                  ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/fastlib/src/engine/board.c:2000:24: error: use of undeclared identifier 'byte_9AA89E'
&& ( ( unsigned __int8)byte_9AA89E[pos] != color || string[239].neighborlist[pos + 159] != v7) 
                       ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/fastlib/src/engine/board.c:1999:7: error: use of undeclared identifier 'byte_9AA89F'
if ( !byte_9AA89F[pos] 
      ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/fastlib/src/engine/board.c:2006:7: error: use of undeclared identifier 'byte_9AA88C'
if ( !byte_9AA88C[pos] 
      ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/fastlib/src/engine/board.c:2008:24: error: use of undeclared identifier 'byte_9AA88D'
&& ( ( unsigned __int8)byte_9AA88D[pos] != color || string[239].neighborlist[pos + 142] != v7) 
                       ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/fastlib/src/engine/board.c:2016:24: error: use of undeclared identifier 'byte_9AA88D'
&& ( ( unsigned __int8)byte_9AA88D[pos] != color || string[239].neighborlist[pos + 142] != v7) ) 
                       ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/fastlib/src/engine/board.c:2044:7: error: use of undeclared identifier 'byte_9AA89F'
if ( !byte_9AA89F[pos] ) 
      ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/fastlib/src/engine/board.c:2046:25: error: use of undeclared identifier 'byte_9AA89E'
v20 = ( unsigned __int8)byte_9AA89E[pos]; 
                        ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/fastlib/src/engine/board.c:2063:7: error: use of undeclared identifier 'byte_9AA88C'
if ( !byte_9AA88C[pos] ) 
      ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/fastlib/src/engine/board.c:2068:25: error: use of undeclared identifier 'byte_9AA88D'
v24 = ( unsigned __int8)byte_9AA88D[pos]; 
                        ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/fastlib/src/engine/board.c:2090:25: error: use of undeclared identifier 'byte_9AA88D'
v28 = ( unsigned __int8)byte_9AA88D[pos]; 
                        ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/fastlib/src/engine/board.c:2113:24: error: use of undeclared identifier 'byte_9AA89F'
if ( ( unsigned __int8)byte_9AA89F[pos] == color ) 
                       ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/fastlib/src/engine/board.c:2116:24: error: use of undeclared identifier 'byte_9AA88C'
if ( ( unsigned __int8)byte_9AA88C[pos] == color ) 
                       ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/fastlib/src/engine/board.c:2131:24: error: use of undeclared identifier 'byte_9AA88C'
if ( ( unsigned __int8)byte_9AA88C[pos] == color ) 
                       ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/fastlib/src/engine/board.c:2165:22: error: use of undeclared identifier 'byte_9AA89F'
|| ( unsigned __int8)byte_9AA89F[v32] == color && string[239].neighborlist[v32 + 160] == v7 
                     ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/fastlib/src/engine/board.c:2166:22: error: use of undeclared identifier 'byte_9AA88C'
|| ( unsigned __int8)byte_9AA88C[v32] == color && string[239].neighborlist[v32 + 141] == v7 
                     ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/fastlib/src/engine/board.c:2170:22: error: use of undeclared identifier 'byte_9AA89F'
|| ( unsigned __int8)byte_9AA89F[v32] == color && string[239].neighborlist[v32 + 160] == v8 
                     ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/fastlib/src/engine/board.c:2171:22: error: use of undeclared identifier 'byte_9AA88C'
|| ( unsigned __int8)byte_9AA88C[v32] == color && string[239].neighborlist[v32 + 141] == v8 
                     ^
22 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/fastlib/src/obj/1/board.o] Error 1
